csv with timestamps and notebooks

--- a/Crop_wav.ipynb
+++ b/Crop_wav.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,8 @@
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
     "import soundfile as sf\n",
-    "import yaml"
+    "import yaml\n",
+    "import math"
    ]
   },
   {
@@ -40,16 +41,23 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a96ce1a917c46398ff11f739ba6a25d",
+       "model_id": "d227528ec448451fa90a66f4501600c2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='CSV files:', options=('timestamp_csv/time_stamps_2017-02-04--10-14-06--00-16-35--BC.csv'…"
+       "Dropdown(description='CSV files:', options=('timestamp_csv/time_stamps_2020-12-15--23-21-29--00-40-00--A.csv',…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "timestamp_csv/time_stamps_2017-02-04--10-14-06--00-16-35--BC_2.csv\n"
+     ]
     }
    ],
    "source": [
@@ -80,27 +88,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-157-479cb27557da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdirectory\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtime_stamps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex_col\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Also extract recording name for later use\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mrecording_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename = directory + file[0]\n",
     "time_stamps=pd.read_csv(filename, index_col=0)\n",
     "\n",
     "# Also extract recording name for later use\n",
-    "recording_name=file[0][12:-4]"
+    "recording_name=file[0][26:-4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2017-02-04--10-14-06--00-16-35--BC_2'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recording_name"
    ]
   },
   {
@@ -112,9 +128,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please check sampling rate manually in the metadata file and set below in Hz! \n",
+      "100000\n",
+      "Please check reference value in the files README and set below in uPa! \n",
+      "1\n",
+      "Please check calibration value in the files README and set below! \n",
+      " what does the fullscale voltage correspond to in Pa? \n",
+      " 1\n",
+      "Please indicate the researcher who performs the crop by initials [SG, JR] \n",
+      " SG\n"
+     ]
+    }
+   ],
    "source": [
     "# Set sample rate\n",
     "try:\n",
@@ -143,12 +175,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y, sr = librosa.load(recording_name + '.wav', sr=sample_rate)"
+    "recording_name=recording_name[:-2]\n",
+    "\n",
+    "y, sr=librosa.load('wav_files/' +recording_name + '.wav', sr=sample_rate)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    842.0\n",
+       "1    849.0\n",
+       "2    857.0\n",
+       "3    871.0\n",
+       "4    879.0\n",
+       "5    927.0\n",
+       "6    953.0\n",
+       "7    972.0\n",
+       "Name: onset, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(time_stamps.onset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    842\n",
+       "1    849\n",
+       "2    856\n",
+       "3    870\n",
+       "4    879\n",
+       "5    926\n",
+       "6    952\n",
+       "7    971\n",
+       "Name: onset, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "time_stamps.onset.apply(lambda x: math.floor(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -161,12 +280,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_stamps['onset_samples']=time_stamps.onset.apply(lambda x: int(round(x*sr)))\n",
-    "time_stamps['offset_samples']=time_stamps.offset.apply(lambda x: int(round(x*sr)))"
+    "time_stamps.onset=time_stamps.onset.apply(lambda x: math.floor(x)) # Round down\n",
+    "time_stamps.offset=time_stamps.offset.apply(lambda x: math.ceil(x)) # Round up and + 1 \n",
+    "\n",
+    "time_stamps['onset_samples']=time_stamps.onset.apply(lambda x: x*sr) \n",
+    "time_stamps['offset_samples']=time_stamps.offset.apply(lambda x: x*sr + 1)"
    ]
   },
   {
@@ -178,9 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 17] File exists: './call_segments/2017-02-04--10-14-06--00-16-35--BC'\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    os.mkdir('./call_segments/' + recording_name)\n",
@@ -191,13 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def crop_call(row, y, sr, recording_name):\n",
     "    call_filename= recording_name + '_' + str(row.onset_samples) + '_' + str(row.offset_samples) + '.wav'\n",
-    "    call=y[row.onset_samples: row.offset_samples]\n",
+    "    call=y[row.onset_samples: row.offset_samples]  # Interval closed at the beginning and open at the end\n",
     "    call_path='./call_segments/' + recording_name +'/' +  call_filename\n",
     "    sf.write(call_path, call, sr) \n",
     "    return call_path"
@@ -205,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,37 +371,17 @@
     "    meta_df['cal_value']=pd.Series([cal_value]*len(time_stamps))\n",
     "    meta_df['researcher']=pd.Series(['SG']*len(time_stamps))\n",
     "    \n",
-    "    return "
+    "    return meta_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "researcher='SG'\n",
-    "prep_metadata(time_stamps, sample_rate, ref_value, cal_value, researcher)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2017-02-04--10-14-06--00-16-35--BC'"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "row.wav_origin[:-4]"
+    "meta_df=prep_metadata(time_stamps, sample_rate, ref_value, cal_value, researcher)"
    ]
   },
   {
@@ -283,7 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,28 +419,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     None\n",
-       "1     None\n",
-       "2     None\n",
-       "3     None\n",
-       "4     None\n",
-       "5     None\n",
-       "6     None\n",
-       "7     None\n",
-       "8     None\n",
-       "9     None\n",
-       "10    None\n",
-       "11    None\n",
-       "dtype: object"
+       "0      None\n",
+       "1      None\n",
+       "2      None\n",
+       "3      None\n",
+       "4      None\n",
+       "       ... \n",
+       "119    None\n",
+       "120    None\n",
+       "121    None\n",
+       "122    None\n",
+       "123    None\n",
+       "Length: 124, dtype: object"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,11 +458,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_stamps.to_csv('call_data_' + recording_name + '.csv')"
+    "time_stamps.to_csv('call_data/call_data_' + recording_name + '.csv')"
    ]
   },
   {
