--- a/Ringdown_analysis.ipynb
+++ b/Ringdown_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cab1e6aac190494c9825cfb02db4c775",
+       "model_id": "b4ce8c21b664424bbed423600062efd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,56 +142,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of data points: 99500996, fs: 100000 Hz, resulting file length: 16.583499333333332 min.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Read in wav\n",
-    "filename = directory + file[0]\n",
-    "y, sr = librosa.load(filename, sr=sample_rate)\n",
-    "print('Number of data points: {}, fs: {} Hz, resulting file length: {} min.'.format(np.shape(y)[0], sr, np.shape(y)[0]/sr/60))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Display wav file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "071765766bc243dcb8fc655cd62f293b",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+       "['2017-02-04--10-14-06--00-16-35--BC_97052456_97622778.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_86994040_87290169.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_92602541_93030283.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_39943424_40415037.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_85157436_85135501.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_40985359_41544714.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_87915331_88178557.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_94554799_94730283.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_95196915_95668528.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_51657968_51921194.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_85629049_85958082.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_84192275_84576146.wav']"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Display wav\n",
-    "plt.figure(figsize=(20, 5))\n",
-    "librosa.display.waveshow(y, sr)\n",
-    "plt.show()"
+    "directory='/Users/saroltagabulya/git/Orca/call_segments/'\n",
+    "\n",
+    "folder_name = directory + file[0][10:-4]\n",
+    "os.chdir(folder_name)\n",
+    "wavs=glob.glob('*.wav')\n",
+    "wavs"
    ]
   },
   {
@@ -203,17 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def open_wav(wav, sample_rate):\n",
+    "    y, sr = librosa.load(wav, sr=sample_rate)\n",
+    "    return y\n",
+    "\n",
     "def convert_wav_to_spect(y, ref_value):\n",
-    "    # Convert to spectogram \n",
-    "    Y = librosa.stft(y) \n",
-    "    #Ydb = librosa.amplitude_to_db(abs(Y), ref=1)\n",
-    "    Ydb = librosa.amplitude_to_db(abs(Y), ref=ref_value) # Try if it works leaving away abs!\n",
-    "                                               # Check whether reference should go in as amplitude or power\n",
-    "    return Ydb"
+    "    \n",
+    "    if len(y)>0:\n",
+    "        # Convert to spectogram \n",
+    "        Y = librosa.stft(y, ) \n",
+    "        Ydb = librosa.amplitude_to_db(abs(Y), ref=ref_value) # Try if it works leaving away abs!\n",
+    "                                                   # Check whether reference should go in as amplitude or power\n",
+    "        return Ydb\n",
+    "    else: \n",
+    "        print ('Error with wav')\n",
+    "        return None"
    ]
   },
   {
@@ -225,11 +215,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def onclick_for_s(s):\n",
+    "def onclick_for_w(w):\n",
     "    def onclick(event):\n",
     "        if event.key=='b':\n",
     "            row.clear()\n",
@@ -267,11 +257,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_stamps=pd.DataFrame(columns=['onset', 'offset', 'filename'])\n",
+    "#amplitudes=pd.DataFrame()\n",
     "events = []\n",
     "row=[]"
    ]
@@ -280,62 +270,262 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Crop Ydb into smaller segments"
+    "### Close previous plots and replot interactive plots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f966841efa14c78a7169c3db39af8b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 60000000\n",
-      "60000000 99500996\n"
+      "succeeded to open 1\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6562c485a5ac4a5b868f2d24503c4fd9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "succeeded to open 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for w in [1, 2]: #list(range(len(wavs))):\n",
+    "    wav=wavs[w]\n",
+    "    y=open_wav(wav, sample_rate)\n",
+    "    Ydb=convert_wav_to_spect(y, ref_value)\n",
+    "    \n",
+    "    if type(Ydb)!= None: \n",
+    "        \n",
+    "        try: \n",
+    "            plt.figure()\n",
+    "\n",
+    "            # tell mpl_connect we want to pass a 'button_press_event' into onclick when the event is detected\n",
+    "            plt.gcf().canvas.mpl_connect('key_press_event', onclick_for_w(w))\n",
+    "\n",
+    "            librosa.display.specshow(Ydb, cmap='seismic', sr=sample_rate, x_axis='time', y_axis='hz')\n",
+    "            plt.xlabel('time(samples)')\n",
+    "            plt.ylabel('dBa relative to 1 uPa**2/Hz')\n",
+    "            plt.colorbar()\n",
+    "            plt.show()\n",
+    "            print('succeeded to open {}'.format(w))\n",
+    "            \n",
+    "        except:\n",
+    "                print('could not display spectogram')\n",
+    "    else: \n",
+    "        print('problem with wav')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-bb720258a04c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0monset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msegment_boundaries\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0moffset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msegment_boundaries\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-60fa62c0aada>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
      ]
     }
    ],
    "source": [
-    "y_list=[]\n",
-    "ideal_length=600*sample_rate\n",
-    "segment_boundaries=list(range(0, np.shape(y)[0], ideal_length))\n",
+    "hop_length=256, n_fft=4096"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014251709"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=open_wav('2017-02-04--10-14-06--00-16-35--BC_39943424_40415037.wav', sample_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00018311, 0.00030518, 0.00033569, ..., 0.00152588, 0.00167847,\n",
+       "       0.0017395 ], dtype=float32)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2017-02-04--10-14-06--00-16-35--BC_97052456_97622778.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_86994040_87290169.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_92602541_93030283.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_39943424_40415037.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_85157436_85135501.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_40985359_41544714.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_87915331_88178557.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_94554799_94730283.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_95196915_95668528.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_51657968_51921194.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_85629049_85958082.wav',\n",
+       " '2017-02-04--10-14-06--00-16-35--BC_84192275_84576146.wav']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try out different spectogram parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def open_wav(wav, sample_rate):\n",
+    "    y, sr = librosa.load(wav, sr=sample_rate)\n",
+    "    return y\n",
     "\n",
-    "if np.shape(y)[0]>ideal_length:\n",
-    "    a=round(np.shape(y)[0]/ideal_length)\n",
+    "def convert_wav_to_spect(y, ref_value):\n",
     "    \n",
-    "    for i in list(range(a+1)):\n",
-    "        onset=segment_boundaries[i]\n",
-    "        try:\n",
-    "            offset=segment_boundaries[i+1]\n",
-    "        except: \n",
-    "            offset=np.shape(y)[0]\n",
-    "        y_list.append(y[onset:offset])\n",
-    "        print(onset, offset)\n",
-    "        "
+    "    if len(y)>0:\n",
+    "        # Convert to spectogram \n",
+    "        Y = librosa.stft(y, n_fft=1024, hop_length=32, win_length=500) \n",
+    "        Ydb = librosa.amplitude_to_db(abs(Y), ref=ref_value) # Try if it works leaving away abs!\n",
+    "                                                   # Check whether reference should go in as amplitude or power\n",
+    "        return Ydb\n",
+    "    else: \n",
+    "        print ('Error with wav')\n",
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 166,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1cfe9857e1f414b98b9f22521592e59",
+       "model_id": "b0f15df2b8504386ab538039ba8850a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -345,152 +535,44 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b37cd208a2049d8b08e0a42ec30d3a8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
     }
    ],
    "source": [
-    "for s in list(range(len(y_list))):\n",
-    "    segment=y_list[s]\n",
-    "    spect=convert_wav_to_spect(segment, ref_value)\n",
-    "    spect=spect[0:250, :]\n",
-    "    # Plot spectrogram\n",
-    "    plt.figure(figsize=(200, 5))\n",
-    "    # tell mpl_connect we want to pass a 'button_press_event' into onclick when the event is detected\n",
-    "    plt.gcf().canvas.mpl_connect('key_press_event', onclick_for_s(s))\n",
-    "    librosa.display.specshow(spect, cmap='seismic', sr=sample_rate, x_axis='time', y_axis='hz')\n",
-    "    plt.xticks(np.arange(0, len(spect)+1, 10))\n",
-    "    plt.colorbar()\n",
-    "    print(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(250, 77151)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.shape(spect[0:250, :])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plotting and connecting eventhandler to plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4f28c588e904386a840a25c03c353c0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x12c06d370>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Plot spectrogram\n",
-    "plt.figure(figsize=(200, 5))\n",
+    "wav='2017-02-04--10-14-06--00-16-35--BC_97052456_97622778.wav'\n",
+    "y=open_wav(wav, sample_rate)\n",
+    "Ydb=convert_wav_to_spect(y, ref_value)\n",
+    "    \n",
+    "#if type(Ydb)!= None: \n",
+    "        \n",
+    "\n",
+    "#plt.figure(figsize=(round(np.shape(Ydb)[0]/10), round(np.shape(Ydb)[1]/10)))\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "\n",
     "# tell mpl_connect we want to pass a 'button_press_event' into onclick when the event is detected\n",
-    "plt.gcf().canvas.mpl_connect('key_press_event', onclick)\n",
-    "librosa.display.specshow(Ydb, cmap='seismic', sr=sr, x_axis='time', y_axis='hz')\n",
-    "plt.xticks(np.arange(0, len(Ydb)+1, 10))\n",
-    "plt.colorbar()"
+    "#plt.gcf().canvas.mpl_connect('key_press_event', onclick_for_w(w))\n",
+    "\n",
+    "librosa.display.specshow(Ydb, cmap='seismic', sr=sample_rate, x_axis='time', y_axis='fft')\n",
+    "plt.xlabel('time(samples)')\n",
+    "plt.ylabel('dBa relative to 1 uPa**2/Hz')\n",
+    "plt.colorbar()\n",
+    "plt.show()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 167,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Make sure to save time_stamps as csv by clicking s on graph!"
+    "plt.savefig('#21_nfft_1024_hop_32_win_500.png')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
