--- a/Spectograms.ipynb
+++ b/Spectograms.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
-    "import soundfile as sf"
+    "import soundfile as sf\n",
+    "import yaml"
    ]
   },
   {
@@ -33,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24ce34d3f98e4215a75dd9d05fce4d7a",
+       "model_id": "a4f5d1ec8b1b469e8707f101427d6cfb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='CSV files:', options=('call_data_2017-02-04--10-14-06--00-16-35--BC_2.csv', 'time_stamps…"
+       "Dropdown(description='CSV files:', options=('.DS_Store', '.ipynb_checkpoints', '2017-02-04--10-14-06--00-16-35…"
       ]
      },
      "metadata": {},
@@ -54,17 +55,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time_stamps_2017-02-04--10-14-06--00-16-35--BC_2.csv\n"
+      "2020-12-15--23-21-29--00-40-00--A\n"
      ]
     }
    ],
    "source": [
-    "directory='/Users/saroltagabulya/git/Orca/'\n",
-    "wavs=glob.glob('*.csv')\n",
+    "directory='/Users/saroltagabulya/git/Orca/call_segments/'\n",
+    "\n",
+    "folders=os.listdir(directory)\n",
     "file=[]\n",
     "\n",
     "dropdown=widgets.Dropdown(\n",
-    "    options=wavs,\n",
+    "    options=folders,\n",
     "    description='CSV files:',\n",
     "    disabled=False,\n",
     ")\n",
@@ -81,23 +83,237 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read csv file as pandas"
+    "### Read wav file names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2020-12-15--23-21-29--00-40-00--A_66243375_66444907.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_94024651_94143925.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_72145018_72305421.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_109018800_109142187.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_67954716_68349555.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_110316607_110575720.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_88557369_88713660.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_17776329_18314746.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_90661768_90745895.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_21120120_21214716.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_24341270_24526350.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_47122378_47288014.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_114214143_114333418.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_112392503_112643390.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_115679458_115934458.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_9409188_9667180.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_10014534_10133808.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_406768_521930.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_7710560_7866850.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_66585120_66885361.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_99528089_99807766.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_92554849_92698801.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_52865487_53116374.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_93225252_93377055.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_22798931_22918205.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_113557949_113808836.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_67280948_67457803.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_105747921_106015260.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_94361535_94630743.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_1913236_1987268.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_19215845_19306329.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_93052510_93180010.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_87092802_87236754.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_22066461_22148719.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_1789474_1871732.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_91668332_91762928.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_82584313_83175075.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_16237730_16352891.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_55711614_55826775.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_114345756_114440353.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_27000077_27185158.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_713390_795648.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_94979966_95099240.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_96389943_96496879.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_94681220_94792268.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_29463329_29570264.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_30181680_30395551.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_101274203_101393477.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_109471592_109562076.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_109586754_109685463.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_55178061_55313787.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_19655926_19758749.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_91091403_91195721.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_11557993_11689606.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_53920633_54081036.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_2412392_2568683.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_41552010_41741204.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_19343345_19421491.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_17303345_17402055.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_8300200_8530523.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_8940691_9121659.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_34944819_35113448.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_54776117_55022891.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_92230303_92407158.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_97466029_97700464.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_21667509_21807348.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_4832649_4902569.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_2743294_2866681.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_40730926_40850200.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_96858814_96932473.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_5981644_6059790.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_1023353_1257788.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_20511410_20680039.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_44540971_44676696.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_6724585_6946681.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_106121072_106195105.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_91876220_91954365.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_83491769_83763220.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_17450287_17524320.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_7116432_7630545.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_119143249_119418814.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_28571202_28698702.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_99257386_99384886.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_91987268_92081865.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_5689628_5804790.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_18568997_18700610.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_25185162_25600565.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_24752187_24916703.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_20826234_20916718.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_14283727_14431792.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_13625663_13823082.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_111288000_111378483.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_53728074_53876138.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_106357751_106419445.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_7630545_7626432.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_116020455_116168519.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_30564204_30794526.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_90671887_90750032.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_107571058_107789041.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_110139752_110271365.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_36791139_37058478.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_4050824_4157760.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_13244283_13421138.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_46653483_46738008.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_22284818_22757802.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_98513324_99055854.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_84619451_84788058.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_23464101_23916520.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_65813015_66050069.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_108579092_108768286.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_107180332_107398316.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_91208060_91290318.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_48219400_48310260.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_98525663_98587356.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_97230845_97327685.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_41872817_42024994.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_16439636_16550684.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_6412004_6572407.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_4470714_4585875.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_90028381_90139430.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_99937883_100131189.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_86864701_86958570.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_93713191_93853030.wav',\n",
+       " '2020-12-15--23-21-29--00-40-00--A_15730720_15849994.wav']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "folder_name = directory + file[0]\n",
+    "os.chdir(folder_name)\n",
+    "wavs=glob.glob('*.wav')\n",
+    "wavs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract samplerate from metadata file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = directory + file[0]\n",
-    "time_stamps=pd.read_csv(filename, index_col=0)\n",
+    "w=wavs[0]\n",
     "\n",
-    "# Also extract recording name for later use\n",
-    "recording_name=file[0][12:-4]\n",
+    "yml_file=w[:-3] + 'yml'\n",
     "\n",
-    "recording_name='2017-02-04--10-14-06--00-16-35--BC'"
+    "\n",
+    "with open(yml_file) as file:\n",
+    "    # The FullLoader parameter handles the conversion from YAML\n",
+    "    # scalar values to Python the dictionary format\n",
+    "    metadata = yaml.load(file, Loader=yaml.FullLoader)\n",
+    "    \n",
+    "\n",
+    "sample_rate=metadata['sample_rate']\n",
+    "\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define functions to open wav as spect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def open_wav(row, sample_rate):\n",
+    "    y, sr = librosa.load(row.call_wav, sr=sample_rate)\n",
+    "    return y, sr, row.call_wav\n",
+    "\n",
+    "def wav_to_spect(y, sr, call_wav):\n",
+    "    \n",
+    "    if len(y)>0:\n",
+    "        # Convert to spectogram \n",
+    "        Y = librosa.stft(y)\n",
+    "        Ydb = librosa.amplitude_to_db(abs(Y), ref=1)\n",
+    "        \n",
+    "        librosa.display.specshow(Ydb, cmap='seismic', sr=sr, x_axis='time', y_axis='hz')\n",
+    "\n",
+    "        #plt.imshow(Ydb, aspect=0.3, origin='lower')\n",
+    "        plt.xlabel('time(samples)')\n",
+    "        plt.ylabel('Hz')\n",
+    "\n",
+    "        # Save spectograms\n",
+    "        plt.savefig(call_wav[:-3] + 'png')\n",
+    "        plt.close()\n",
+    "    \n",
+    "        return Ydb\n",
+    "    \n",
+    "    else: \n",
+    "        return 'Error with wav'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -292,57 +508,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Function for converting wavs into spectrograms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def open_wav(row, sample_rate):\n",
-    "    y, sr = librosa.load(row.call_wav, sr=sample_rate)\n",
-    "    return y, sr, row.call_wav"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def wav_to_spect(y, sr, call_wav):\n",
-    "    \n",
-    "    if len(y)>0:\n",
-    "        # Convert to spectogram \n",
-    "        Y = librosa.stft(y)\n",
-    "        Ydb = librosa.amplitude_to_db(abs(Y), ref=1)\n",
-    "        \n",
-    "        librosa.display.specshow(Ydb, cmap='seismic', sr=sr, x_axis='time', y_axis='hz')\n",
-    "\n",
-    "        #plt.imshow(Ydb, aspect=0.3, origin='lower')\n",
-    "        plt.xlabel('time(samples)')\n",
-    "        plt.ylabel('Hz')\n",
-    "\n",
-    "        # Save spectograms\n",
-    "        plt.savefig(call_wav[:-3] + 'png')\n",
-    "        plt.close()\n",
-    "    \n",
-    "        return Ydb\n",
-    "    \n",
-    "    else: \n",
-    "        return 'Error with wav'"
    ]
   },
   {
